CI: set PERSISTENCE_TYPE=sql for sqlite tests
The Makefile defaults to nosql/cassandra. Need both env vars.

--- a/.github/workflows/repro-flaky-test.yml
+++ b/.github/workflows/repro-flaky-test.yml
@@ -32,5 +32,6 @@ jobs:
         run: |
           make functional-test-coverage
         env:
+          PERSISTENCE_TYPE: sql
           PERSISTENCE_DRIVER: sqlite
           TEST_ARGS: "-run TestWorkflowTestSuite/TestWorkflowTaskAndActivityTaskTimeoutsWorkflow -count 1"
