write stats to file

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -539,6 +539,10 @@ jobs:
         if: always()
         run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
 
+      - name: Print cluster stats
+        if: always()
+        run: if [ -f /tmp/temporal_cluster_stats.txt ]; then cat /tmp/temporal_cluster_stats.txt; fi
+
       - name: Generate crash report
         if: failure()
         run:
