add second tool to ci-notify

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -949,6 +949,7 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           GH_TOKEN: ${{ github.token }}
         run: |
-          go run ./cmd/tools/ci-notify \
+          go run ./cmd/tools/ci-notify failure \
             --run-id "${{ github.run_id }}" \
+            --branch main \
             --slack-webhook "$SLACK_WEBHOOK"
